# Smart_Flower_Pot

./: .gitignore  HC05_CONFIGURATION_GUIDE.md  HC05_README.md  README.md
Application/: .qmake.stash  CMakeLists.txt  IrrigationApp.pro  README.md  manifest.json  pages.json
Application/android/: AndroidManifest.xml
Application/android/src/com/irrigation/app/: BluetoothHelper.java
Application/pages/index/: index.vue
Application/qml/: Card.qml
Application/src/: bluetoothmanager.cpp  bluetoothmanager.h  main.cpp
STMicroelectronics/: Pro.uvguix.Administrator  Pro.uvguix.windows  Pro.uvoptx  Pro.uvprojx  README.md
STMicroelectronics/Hardware/: AD.c  AD.h  CJSLDHT11.c  CJSLDHT11.h  HC05.c  HC05.h  Key.c  LED.c  LED.h  OLED.c  OLED.h  OLED_Font.h  WaterPump.c  WaterPump.h
STMicroelectronics/Listings/: Pro.map  startup_stm32f10x_md.lst
STMicroelectronics/Objects/: Pro.axf  Pro.build_log.htm  Pro.htm  Pro.lnp  Pro_Target 1.dep  delay.crf  delay.d  key.crf  key.d  led.crf  main.crf  main.d  oled.crf  oled.d
STMicroelectronics/User/: main.c  stm32f10x_it.c
backup/: BUILD.md  README.md  bluetoothmanager.cpp  bluetoothmanager.h  main.qml
docs/plan/: 基于STM32单片机自动浇灌系统.docx  基于STM32单片机自动浇灌系统.md  智能自动浇灌系统-详细设计V1.0.md
docs/superpowers/specs/: 2026-04-17-智能灌溉APP设计.md
